--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,9 @@
 @import "./variables.scss";
 
 .App {
-  background: black;
+  background: rgb(0, 0, 47);
   color: white;
-  padding: 10px;
-  height: 250px;
+  height: 251px;
   a {
     color: lightblue;
   }
