--- a/src/components/BasicControls/BasicControls.scss
+++ b/src/components/BasicControls/BasicControls.scss
@@ -1,5 +1,47 @@
-.basic-details {
+.basic-controls {
   .content {
     display: flex;
+    flex-direction: column;
+
+    .thumbnail {
+      text-align: center;
+      img {
+        width: 100%;
+      }
+    }
+    .video-info {
+      letter-spacing: 1px;
+      h4 {
+        margin: 6px;
+      }
+      h5 {
+        margin: 2px 6px 10px;
+      }
+    }
+    .controls {
+      // border: 1px solid white;
+      // border-radius: 10px;
+      justify-content: center;
+      display: flex;
+      // width: fit-content;
+
+      .custom-btn {
+        border: 1px solid white;
+        border-radius: 10px;
+        margin: 5px;
+        // border: none;
+        background-color: transparent;
+        color: white;
+        cursor: pointer;
+        padding: 6px 12px;
+        a {
+          text-decoration: none;
+          color: white;
+        }
+      }
+      // .pause {
+      //   border-right: 1px solid white;
+      // }
+    }
   }
 }
