--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,8 @@
 @import "./variables.scss";
 
 .app {
-  background: rgb(0, 0, 47);
+  background: #20272d;
   color: white;
-  height: 251px;
   a {
     text-decoration: none;
     color: white;
