--- a/src/components/BasicControls/BasicControls.scss
+++ b/src/components/BasicControls/BasicControls.scss
@@ -1,47 +1,61 @@
 .basic-controls {
   .content {
     display: flex;
-    flex-direction: column;
+    .video-info {
+      // box-shadow: 13px 0px 23px 11px #20272d;
+      // z-index: 1;
+      letter-spacing: 1px;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 8px 8px 8px 10px;
+
+      p {
+        margin: 6px 0 12px;
+        font-size: 10px;
+        color: #777;
+      }
+      .title {
+        h4 {
+          margin: 0 0 3px 0;
+          font-size: 20px;
+          font-weight: 500;
+        }
+      }
+      .channel-title {
+        h5 {
+          margin: 2px 0px 10px;
+          font-weight: 400;
+        }
+      }
+
+      .controls {
+        // border: 1px solid white;
+        // border-radius: 10px;
+        // justify-content: center;
+        display: flex;
+        .general-controls {
+          border-right: 1px solid #777;
+        }
+        .custom-btn {
+          // border: 1px solid white;
+          // border-radius: 10px;
+          border: none;
+          margin: 5px;
+          background-color: transparent;
+          color: white;
+          cursor: pointer;
+          padding: 6px 12px;
+        }
+      }
+    }
 
     .thumbnail {
-      text-align: center;
+      flex: 1;
+      display: flex;
       img {
         width: 100%;
       }
-    }
-    .video-info {
-      letter-spacing: 1px;
-      h4 {
-        margin: 6px;
-      }
-      h5 {
-        margin: 2px 6px 10px;
-      }
-    }
-    .controls {
-      // border: 1px solid white;
-      // border-radius: 10px;
-      justify-content: center;
-      display: flex;
-      // width: fit-content;
-
-      .custom-btn {
-        border: 1px solid white;
-        border-radius: 10px;
-        margin: 5px;
-        // border: none;
-        background-color: transparent;
-        color: white;
-        cursor: pointer;
-        padding: 6px 12px;
-        a {
-          text-decoration: none;
-          color: white;
-        }
-      }
-      // .pause {
-      //   border-right: 1px solid white;
-      // }
     }
   }
 }
