--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 @import "./variables.scss";
 html {
-  min-width: 250px;
-  min-height: 250px;
+  min-width: 490px;
+  // min-width: 474px;
+  // min-height: 240px;
   margin: 0;
-  background: rgb(0, 0, 47);
   &::-webkit-scrollbar {
     display: none;
   }
