--- a/src/components/AdvancedInfo/AdvancedControls.scss
+++ b/src/components/AdvancedInfo/AdvancedControls.scss
@@ -1,4 +1,5 @@
 .advanced-controls {
+  z-index: 3;
   background-color: #292a2e;
   .content {
     display: flex;
@@ -34,4 +35,8 @@
       }
     }
   }
+}
+
+.advanced-controls * {
+  z-index: 3;
 }
