--- a/src/components/BasicControls/BasicControls.scss
+++ b/src/components/BasicControls/BasicControls.scss
@@ -2,8 +2,8 @@
   .content {
     display: flex;
     .video-info {
-      // box-shadow: 13px 0px 23px 11px #20272d;
-      // z-index: 1;
+      box-shadow: 10px 0 15px 15px #20272d;
+      z-index: 2;
       letter-spacing: 1px;
       flex: 1;
       display: flex;
