--- a/src/components/AdvancedInfo/AdvancedControls.scss
+++ b/src/components/AdvancedInfo/AdvancedControls.scss
@@ -20,6 +20,8 @@
       color: black;
       font-size: 16px;
       margin: 0 10px;
+      width: 10%;
+      justify-content: center;
     }
     .controls {
       display: flex;
