--- a/src/components/Stats/Stats.scss
+++ b/src/components/Stats/Stats.scss
@@ -8,6 +8,7 @@
       padding: 8px 16px;
       font-size: 16px;
       border-radius: 20px;
+      cursor: pointer;
     }
     .playlist-time {
       display: flex;
